--- a/css/index_style.css
+++ b/css/index_style.css
@@ -1,26 +1,57 @@
-h3 {
+:root {
+	--main-blue-dark: #0F0D22;
+	--main-blue-med: #36464F;
+	--main-clay: #764134;
+	--main-gray-dark: #424342;
+	--main-gray-light: #4C504F;
+	--main-white: #FDFDFF;
+}
+
+
+
+/*h3 {
 	text-align: center;
 	font-size: 30px;
-	color: #003399;
-	text-shadow: 2px 2px 0 rgba(255, 153, 51, 0.5);
-}
+	color: var(--main-blue-dark);
+	text-shadow: 2px 2px 0 white;
+} */
 
 .jumbotron {
 	min-height: 100vh;
 }
 
-.navbar-default .navbar-brand {
-	color: white;
+.navbar-inverse {
+	background-color: var(--main-blue-med);
 }
 
-.navbar-default .navbar-nav > li > a {
-	color: #CCCCCC;
+.center {
+	position: absolute;
+	top: 40%;
+	left: 50%;
+	transform: translate(-50%, -50%); 
+	font-size: 30px;
+	color: var(--main-white);
+	text-shadow: black 0.1em 0.1em 0.2em ;
+	
+	
 }
 
-.navbar-default .navbar-brand:hover {
-	color: #FF9933;
+.navbar-inverse .navbar-brand {
+	color: var(--main-white);
 }
 
-.navbar-default .navbar-nav > li > a:hover {
-	color: #FF9933;
+.navbar-inverse .navbar-nav .nav-link {
+	color: var(--main-blue-dark); /* var(--main-blue-light) */
 }
+
+.navbar-inverse .navbar-brand:hover,
+.navbar-inverse .navbar-nav .nav-link:hover,
+.navbar-inverse .navbar-nav > li > a:focus {
+	color: var(--main-clay);
+}
+
+
+
+
+
+
