--- a/css/index_style.css
+++ b/css/index_style.css
@@ -20,12 +20,6 @@ body {
 	padding-top: 40px;
 } 
 
-h3 {
-	text-align: right;
-	font-size: 18px;
-	color: var(--main-white);
-}
-
 .jumbotron {
 	min-height: 100vh;
 }
@@ -86,18 +80,18 @@ h3 {
 	margin-left: -15px;
 }
 
-.wrap {
+/*.wrap {
 	height: 100%;
 	width: 100%;
 	position: absolute;
 	/* This ensures that the images cannot
 		render outside of their container
-		without forcing any scrollbars */
+		without forcing any scrollbars
 	overflow: hidden;
 	top: 0;
 	left: 0;
 	text-align: center;
-}
+} no longer used */
 
 .flex-container {
 	display: -webkit-flex;
@@ -159,7 +153,26 @@ h3 {
 }
 
 .overlay-text {
-	text-align: right;
+	text-align: center;
+	display: table-cell;
+	vertical-align: top;
+	
+	line-height: normal;
+
+}
+
+.overlay-text-box {
+	float: right;
+	display: table;
+	max-width: 65%;
+	height: 100%;
+}
+
+.more-button {
+	position: absolute;
+	right: 0;
+	bottom: 0;
+
 }
 
 /*====================================
