--- a/css/index_style.css
+++ b/css/index_style.css
@@ -104,6 +104,13 @@ body {
 	box-shadow: 2px 2px 10px 0 rgba(0, 0, 0, 0.5);
 }
 
+.contactme a {
+	position: absolute;
+	right: 2.5%;
+	bottom: 5%;
+	cursor: pointer;
+}
+
 /*==================================
 	GALLERY SECTION ANIMATION
 ==================================*/
