--- a/css/index_style.css
+++ b/css/index_style.css
@@ -18,7 +18,7 @@ html {
 
 .jumbotron {
 	min-height: 100vh;
-	z-index: -2;
+	/* z-index: -2; */
 }
 
 .navbar-inverse {
@@ -33,7 +33,7 @@ html {
 	font-size: 30px;
 	color: var(--main-white);
 	text-shadow: black 0.1em 0.1em 0.2em ;
-	z-index: -1;
+	/* z-index: -1; */
 }
 
 .navbar-inverse .navbar-brand {
@@ -94,6 +94,11 @@ html {
 	right: 2.5%;
 	bottom: 5%;
 	cursor: pointer;
+	z-index: 999;
+}
+
+.contactme:hover {
+	opacity: 0.7;
 }
 
 /*==================================
@@ -209,7 +214,7 @@ $(".navbar-toggle").click();
 	text-align: center;
 }
 
-#contactme-text {
+#contact-text {
 	font-size: 30px;
 	color: var(--main-white);
 	text-shadow: black 0.1em 0.1em 0.2em ;
