--- a/css/index_style.css
+++ b/css/index_style.css
@@ -5,6 +5,7 @@ element {
 	--main-gray-dark: #424342;
 	--main-gray-light: #4C504F;
 	--main-white: #FDFDFF;
+	--main-yellow: #FEAF16;
 }
 
 html {
@@ -14,6 +15,7 @@ html {
 	--main-gray-dark: #424342;
 	--main-gray-light: #4C504F;
 	--main-white: #FDFDFF;
+	--main-yellow: #FEAF16;
 }
 
 .jumbotron {
@@ -46,7 +48,7 @@ html {
 .navbar-inverse .navbar-brand:hover,
 .navbar-inverse .navbar-nav .nav-link:hover,
 .navbar-inverse .navbar-nav > li > a:focus {
-	color: var(--main-clay);
+	color: var(--main-yellow);
 }
 
 #home,
