--- a/css/index_style.css
+++ b/css/index_style.css
@@ -20,7 +20,14 @@ html {
 
 .jumbotron {
 	min-height: 100vh;
-	
+	max-height: 100%;
+	background-image: url(../images/computer-and-coffee.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: bottom right;
+	background-attachment: fixed;
+	padding-top: 20%;
+	padding-bottom: 20%;
 }
 
 .navbar-inverse {
@@ -192,11 +199,7 @@ html {
 	transform: translate(-90px, 0px);
 }
 
-/*$(‘.nav a’).on(‘click’, function(){
-if ($(document).width() <= 767){
-$(".navbar-toggle").click();
-}
-}); */
+
 
 .contact-container {
 	width: 100%;
@@ -221,7 +224,7 @@ $(".navbar-toggle").click();
 	text-shadow: black 0.1em 0.1em 0.2em ;
 	position: relative;
 	text-align: center;
-	top: 49px;
+	vertical-align: middle;
 }
 
 .contact-card-group {
@@ -231,12 +234,80 @@ $(".navbar-toggle").click();
 	padding: 0;
 	top: 40%;
 	left: 0;
+	background-color: #424342;
+}
+
+.contact-card-surround {
+	background-color: #424342;
 }
 
 .contact-card {
 	cursor: pointer;
+
 }
 
 .contact-card:hover {
 	opacity: 0.7;
+}
+
+.contact-card-body {
+	height: 100%;
+}
+
+.portfolio-card-group {
+	width: 100%;
+	margin: 0px;
+	padding: 10px;
+	top: 40%;
+	left: 0;
+	background-color: transparent;
+	border-radius: 8px;
+}
+
+.portfolio-card-image {
+	width: 100%;
+	height: 20vw;
+	object-fit: cover;
+	position: relative;
+	margin-bottom: 2em;
+	overflow: hidden;
+
+	padding: 1px;
+	border: 1px solid #021A40;
+	background-color: var(--main-gray-light);
+	box-shadow: 2px 2px 10px 0 rgba(0, 0, 0, 0.7);
+	border-radius: 8px;
+}
+
+.portfolio-card {
+	height: 100%;
+	background-color: rgba(255, 255, 255, 0.7);
+
+	color: var(--main-blue-dark);
+}
+
+.card-footer {
+	color: var(--main-white);
+	background-color: var(--main-gray-light);
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+}
+
+.portfolio-container {
+	height: 77%;
+	width: 100%;
+	margin: 0px;
+	background-image: url('../images/create.jpg');
+	background-position: top right;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: cover;
+	position: relative;
+	padding-top: 20%;
+	padding-bottom: 20%;
+}
+
+.portfolio-card-body {
+	padding-bottom: 20%;
 }
