--- a/css/liveproject_style.css
+++ b/css/liveproject_style.css
@@ -91,17 +91,13 @@ p {
 	margin-left: auto;
 }
 
+.card-set {
+	padding: 0 4em 0 4em;
+}
+
 .row {
 	margin-right: -15px;
 	margin-left: -15px;
-}
-
-.row-eq-height{
-	display: -webkit-box;
-	display: -webkit-flex;
-	display: -ms-flexbox;
-	display: flex;
-	height: 100%;
 }
 
 .contactme a {
@@ -135,6 +131,17 @@ p {
 .sample-pic {
 	object-fit: cover;
 	overflow: hidden;
+}
+
+.githublink {
+	position: absolute;
+	bottom: 0;
+	right: 0;
+}
+
+#datepicker-pic {
+	bottom: 0;
+	right: 0;
 }
 
 .contact-container {
