--- a/css/resume_style.css
+++ b/css/resume_style.css
@@ -2,15 +2,21 @@ body {
 	font-family: 'Segoe UI';
 }
 
-li,
+
 p {
-	margin-bottom: 8px;
+	margin-bottom: 4px;
+	font-size: 18px;
+}
+
+li {
+	margin-bottom: 2px;
 	font-size: 16px;
 }
 
+
 .nametag {
 
-	font-size: 32px;
+	font-size: 36px;
 }
 
 .titletag {
@@ -43,6 +49,11 @@ p {
 	/*width: 340px;*/
 }
 
+.oversize-button {
+	white-space: normal;
+	word-wrap: break-word;
+}
+
 @media only screen and (max-width: 768px) {
     /* For mobile phones: */
     [class*="col-"] {
@@ -62,4 +73,46 @@ p {
     .card-text {
     	word-wrap: break-word;
     }
+}
+
+@media print {
+   .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
+        float: left;
+   }
+   .col-sm-12 {
+        width: 100%;
+   }
+   .col-sm-11 {
+        width: 91.66666667%;
+   }
+   .col-sm-10 {
+        width: 83.33333333%;
+   }
+   .col-sm-9 {
+        width: 75%;
+   }
+   .col-sm-8 {
+        width: 66.66666667%;
+   }
+   .col-sm-7 {
+        width: 58.33333333%;
+   }
+   .col-sm-6 {
+        width: 50%;
+   }
+   .col-sm-5 {
+        width: 41.66666667%;
+   }
+   .col-sm-4 {
+        width: 33.33333333%;
+   }
+   .col-sm-3 {
+        width: 25%;
+   }
+   .col-sm-2 {
+        width: 16.66666667%;
+   }
+   .col-sm-1 {
+        width: 8.33333333%;
+   }
 }
