--- a/css/character_style.css
+++ b/css/character_style.css
@@ -42,9 +42,10 @@
 
 .filler-section {
 	height: calc(100% - 5px);
+	padding-top: 5px;
 	padding-bottom: 5px;
 	background-color: #4C504F;
-	box-shadow: 0px 5px 5px rgba(0,0,0,0.2), 0px -5px 5px rgba(0,0,0,0.2);
+	box-shadow: 0px 5px 8px rgba(0,0,0,0.2), 0px -5px 8px rgba(0,0,0,0.2);
 	text-align: center;
 	padding-right: 20%;
 	padding-left: 20%;
@@ -126,7 +127,7 @@
 }
 
 .quote-card-out {
-	box-shadow: 5px 5px 5px rgba(0,0,0,0.2), 5px -5px 5px rgba(0,0,0,0.2);
+	box-shadow: 5px 5px 5px rgba(0,0,0,0.2), 5px -1px 5px rgba(0,0,0,0.2);
 	background-color: #9A8C98;
 }
 
